--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,10 @@
 /* google font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* layout */
 :root {
   --primary: #1aac83;
@@ -41,11 +45,11 @@ header a {
 
 
 /* homepage */
-.home {
+/* .home {
   display: grid;
-  grid-template-columns: 3fr 2fr;
-  gap: 100px;
-}
+  grid-template-columns: 3fr 3fr;
+  grid-template-rows: 2fr;
+} */
 
 .bld-details {
   background: #fff;
